Further work towards fixing the visual alignment of the album cover pulse animations.

--- a/src/styles/components/now-playing.scss
+++ b/src/styles/components/now-playing.scss
@@ -25,11 +25,12 @@
   width: 100%;
 
   &__container {
-      display: flex;
-      flex-flow: column nowrap;
-      height: 100%;
-      padding: 0;
-      width: 100%
+    display: flex;
+    flex-flow: column nowrap;
+    height: 100%;
+    padding: 0;
+    width: 100%;
+    align-items: center;
   }
 
   &__cover,
@@ -50,7 +51,11 @@
   }
 
   &__pulses {
+    aspect-ratio: 1 / 1;
+    max-width: 100%;
+    max-height: 100%;
     position: relative;
+    margin: auto;
     --pulse-cycle-bpm-factor: 1;
     --pulse-cycle-bpm: calc(var(--song-bpm-now-playing)/var(--pulse-cycle-bpm-factor));
     --pulse-cycle-duration: calc(var(--pulse-cycle-wave-duration)*var(--pulse-cycle-wave-count));
@@ -195,7 +200,8 @@
     padding: 10%;
 
     &__container {
-        flex-flow: row nowrap;
+      flex-flow: row nowrap;
+      align-items: normal;
     }
 
     &__cover,
